# lojbanhypop

./: .env.example  .gitignore  AUDIT_REPORT.md  CANONICAL_LEDGER.json  CANONICAL_LEDGER.md  Core Concept_ Self-Optimizing Language Evolution.txt  H5_ABLATION_REPORT.md  M6_EXHAUSTIVE_SPEC.md  M9_EXHAUSTIVE_SPEC.md  README.md  ROOT_RECENT_M_DISCOVERIES_20260311.md  TECHNICAL_APPENDIX.md  pyproject.toml
REPORTS_RELEVANT/: j-5.json  j-5_adversarial.jsonl  l6_ablation_manifest.json  l6_ablation_manifest.md  m3_plus_report.json  token_glossary.csv
RESULTS_FULL_GRID_20260305/: ablation_hypercube_report.json  ablation_hypercube_report.md  ablation_matrix.json  j-5.json  j-5_adversarial.jsonl  l6_ablation_manifest.json  l6_ablation_manifest.md  m3_5_symmetry_report.json  m3_5_symmetry_report.md  m3_plus_report.md  m4_m3plus_report.json  m4_series_report.json
RESULTS_M3_12_GEOMETRIC_RETURN_20260307/: m3_12_A_winograd_eval.json  m3_12_B_winograd_eval.json  m3_12_C_winograd_eval.json  m3_12_return_stream_report.json  m3_12_return_stream_report.md
RESULTS_M3_12_V2_RELATIONAL_20260308_FIX/: lojban_m3_12_geometric_return_stream_dag.py  m3_12_A_winograd_eval.json  m3_12_B_winograd_eval.json  m3_12_C_winograd_eval.json  m3_12_return_stream_report.json  m3_12_return_stream_report.md  run_m3_12_geometric_return_stream.py
RESULTS_M3_14_GUARDED_20260309/: lojban_m3_14_structural_alignment_bridge_dag.py  run_m3_14_structural_alignment_bridge.py
RESULTS_M3_14_PRELIM_20260309/: lojban_m3_14_structural_alignment_bridge_dag.py  m3_14_A_winograd_eval.json  m3_14_C_winograd_eval.json  (+2 more)
(+564 files in other folders)
