[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lojban-language-evolution"
version = "0.2.0"
description = "Self-optimizing language evolution with identity-tracking datasets."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
train = [
  "accelerate>=0.30",
  "datasets>=2.18",
  "peft>=0.11",
  "torch>=2.1",
  "transformers>=4.40",
]
quant = [
  "bitsandbytes>=0.43",
]
dev = [
  "pytest>=8.0",
]
orchestration = [
  "apache-airflow>=2.10,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".venv",
  "__pycache__",
  "runs",
  "src/runs",
  "pytest-cache-files-*",
  "src/pytest-cache-files-*",
]
addopts = "-ra -p no:cacheprovider"
